# torch-opt-automl

./: .env  .gitignore  LICENSE  README.md  chainlit.md  pyproject.toml  setup.py  start.py
.chainlit/: config.toml
demo/: demo_datacleaner.py  demo_metagenerator.py
src/torch_opt_automl/: console.py  mcp.py  server.py
src/torch_opt_automl/data_utils/: cleaner.py
tests/: test.py  test_data_utils.py  test_feature.py
tests/data_utils/: test_01_datacleaner.py  test_02_metagenerator.py  test_datacleaner.py
torch_opt_automl/: feature.py  start.py
torch_opt_automl/data_utils/: data_col_type_parser.py  datacleaner.py  metagenerator.py  parser.py
