[project]
name = "torch_opt_automl"
version = "0.1.0"
description = "an automl framework using torch and optuna"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [

  # model training
  "torch==2.6.0",
  "optuna>=4.2.1",
  "chainlit>=2.5.5",
  "mcp[cli]>=1.6.0",

  # math, feature utils
  "pandas",
  "numpy",
  "scikit-learn",
  "umap-learn",
  "lorem",

  # analysis
  "matplotlib",
  "seaborn",

  # testing
  "pytest",

  # package utils
  "setuptools",
  "wheel",

  # other
  "python-dotenv",
  "aiohttp",

  # output utils
  "wcwidth",
]

# also self install torch_opt_automl
[build-system]
requires = ["setuptools"]
source = { editable = "." }

# for other project can install this project
[tool.setuptools.packages.find]
where = ["src"]
